--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,18 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext{
+    minSdkVersion = 16
+    targetSdkVersion = 26
+    compileSdkVersion = 26
+    buildToolsVersion = '26.1.0'
+    supportLibraryVersion = '26.1.0'
+    guavaVersion = '19.0'
+    rxjavaVersion = '2.1.8'
+    rxandroidVersion = '2.0.1'
+    daggerVersion='2.11'
+    picassoVersion='2.5.2'
+   retrofitVersion='2.3.0'
+    constraintVersion='1.0.2'
+}
